--- a/layout_parts/q4/index.html
+++ b/layout_parts/q4/index.html
@@ -34,16 +34,19 @@
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
         <div class="q4">
-          <div>
-            <div>固定</div>
-            <div>可変</div>
-            <div>固定</div>
+
+          <div class="dtable-top">
+            <div class="dtable_c left_fixed">固定</div>
+            <div class="dtable_c center_variable">可変</div>
+            <div class="dtable_c right_fixed">固定</div>
           </div>
-          <div>
-            <div>可変</div>
-            <div>可変</div>
-            <div>固定</div>
+
+          <div class="dtable-bottom">
+            <div class="dtable_c left_variable">可変</div>
+            <div class="dtable_c center_variable">可変</div>
+            <div class="dtable_c right_fixed">固定</div>
           </div>
+
         </div>
         <!-- 回答はクラスq4の要素の中に書いてね -->
       </div>
