--- a/layout_parts/q6/index.html
+++ b/layout_parts/q6/index.html
@@ -41,8 +41,8 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <div>
-                <p>text-align</p>
+              <div class="q6-1_left">
+                <p class="q6-1_left_text">text-align</p>
               </div>
             </div>
             <!-- Q6-1の回答はここに書いてね -->
@@ -54,7 +54,7 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <p>margin</p>
+              <p class="q6-1_right_margin">margin</p>
             </div>
             <!-- Q6-1の回答はここに書いてね -->
           </div>
@@ -84,9 +84,9 @@
           <!-- Q6-2の回答はここに書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
-          <div class="q6 q6--around">
-            <div>
-              <p>table</p>
+          <div class="q6 q6--around q6-table">
+            <div class="table_c">
+              <p class="table_c_text">table</p>
             </div>
           </div>
           <!-- Q6-2の回答はここに書いてね -->
@@ -99,8 +99,8 @@
           <!-- Q6-2の回答はここに書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
-          <div class="q6 q6--around">
-            <p>flex</p>
+          <div class="q6 q6--around q6-flex">
+            <p class="flex_text">flex</p>
           </div>
           <!-- Q6-2の回答はここに書いてね -->
           <div class="q6 q6--position">
@@ -114,8 +114,8 @@
             <!-- Q6-2の回答はここに書いてね -->
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
-            <div class="q6__box is-stable">
-              <p class="q6__box__inner">position固定</p>
+            <div class="q6__box is-stable q6-fixed">
+              <p class="q6__box__inner fixed_text">position固定</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
             <!--
@@ -128,8 +128,8 @@
             <!-- Q6-2の回答はここに書いてね -->
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
-            <div class="q6__box is-flexible">
-              <p class="q6__box__inner">position可変</p>
+            <div class="q6__box is-flexible q6-variable">
+              <p class="q6__box__inner variable_text">position可変</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
           </div>
