[fix]q1-6のコード修正
チェック項目を参照し、コードの修正を行いました。

--- a/layout_parts/q2/index.html
+++ b/layout_parts/q2/index.html
@@ -32,9 +32,7 @@
         -->
         <!-- 回答はクラスq2の要素の中に書いてね -->
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
-        <div class="q2">
-          <div class="container">
-
+        <div class="q2 q2-container">
             <div>
               <img src="http://gizumo-inc.github.io/sample/front-lesson/layout_parts_new/assets/img/q2/thumb_1.jpg" class="contents_img_left" alt="sumple-image_left">
               <p class="contents_text">
@@ -53,8 +51,6 @@
               </p>
             </div>
 
-          </div>
-          
         </div>
         <!-- 回答はクラスq2の要素の中に書いてね -->
       </div>
