--- a/layout_parts/q4/index.html
+++ b/layout_parts/q4/index.html
@@ -33,18 +33,18 @@
         <!-- 回答はクラスq4の要素の中に書いてね -->
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
-        <div class="q4">
+        <div class="q4 q4-wrapper">
 
-          <div class="dtable-top">
-            <div class="dtable_c left_fixed">固定</div>
-            <div class="dtable_c center_variable">可変</div>
-            <div class="dtable_c right_fixed">固定</div>
+          <div class="q4-contents">
+            <div class="dtable_c contents_pink">固定</div>
+            <div class="dtable_c contents_purple">可変</div>
+            <div class="dtable_c contents_blue">固定</div>
           </div>
 
-          <div class="dtable-bottom">
-            <div class="dtable_c left_variable">可変</div>
-            <div class="dtable_c center_variable">可変</div>
-            <div class="dtable_c right_fixed">固定</div>
+          <div class="q4-contents">
+            <div class="dtable_c contents_yellow">可変</div>
+            <div class="dtable_c contents_red">可変</div>
+            <div class="dtable_c contents_green">固定</div>
           </div>
 
         </div>
