--- a/layout_parts/q5/index.html
+++ b/layout_parts/q5/index.html
@@ -37,7 +37,7 @@
         <!-- 回答はクラスq5の要素の中に書いてね -->
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
-        <div class="q5 q5_wrapper">
+        <div class="q5 q5-wrapper">
           <div class="q5_box box_8">8</div>
           <div class="q5_box box_5">5</div>
           <div class="q5_box box_1">1</div>
