--- a/layout_parts/q7/index.html
+++ b/layout_parts/q7/index.html
@@ -35,10 +35,10 @@
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--float">
             <div class="q7__inner clearfix">
-              <div class="q7__box q7-box_text q7-float_box">
+              <div class="q7__box q7-box q7-float_box">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               </div>
-              <div class="q7__box q7-box_text q7-float_box">
+              <div class="q7__box q7-box q7-float_box">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cill
               </div>
             </div>
@@ -62,13 +62,13 @@
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--table">
             <div class="q7__inner q7-table_box">
-              <div class="q7__box q7-table_c">
-                <div class="q7__box__text q7-box_text">
+              <div class="q7__box q7-box q7-table_c">
+                <div class="q7__box__text">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                 </div>
               </div>
-              <div class="q7__box q7-table_c">
-                <div class="q7__box__text q7-box_text">
+              <div class="q7__box q7-box q7-table_c">
+                <div class="q7__box__text">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cill
                 </div>
               </div>
@@ -89,11 +89,11 @@
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--inlineblock">
-            <div class="q7__inner">
-              <div class="q7__box q7-inlineblock_box">
+            <div class="q7__inner q7-inlineblock_wrapper">
+              <div class="q7__box q7-box q7-inlineblock_box">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               </div>
-              <div class="q7__box q7-inlineblock_box">
+              <div class="q7__box q7-box q7-inlineblock_box">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cill
               </div>
             </div>
@@ -116,11 +116,11 @@
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--flex">
-            <div class="q7__inner">
-              <div class="q7__box">
+            <div class="q7__inner q7-flex_container">
+              <div class="q7__box q7-box q7-flex_item">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               </div>
-              <div class="q7__box">
+              <div class="q7__box q7-box q7-flex_item">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cill
               </div>
             </div>
@@ -147,14 +147,14 @@
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--margin">
-            <div class="q7__inner is-full">
-              <div class="q7__box">
-                <div class="q7__box__text">
+            <div class="q7__inner is-full q7-margin_wrapper">
+              <div class="q7__box q7-margin_box q7-margin_side">
+                <div class="q7__box__text q7-margin_text">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                 </div>
               </div>
-              <div class="q7__box">
-                <div class="q7__box__text">
+              <div class="q7__box q7-margin_box q7-margin_main">
+                <div class="q7__box__text q7-margin_text">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
                 </div>
               </div>
